<resources>
    <string name="app_name">DCH</string>
    <string name="action_settings">Sign Out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">D C H</string>
    <string name="second_fragment_label">Login</string>

    <string name="vission"><b><u>VISION</u></b>\n
To be the center of excellence in the delivery of health care and human resource development through the most prudent, cost effective use of available resources.

 </string>
   <string name="mission"><b><u>MISSION</u></b>\n

To provide a comprehensive range of secondary level high quality inpatient and outpatient healthcare services to the People Of Eastern Region and beyond in a client  friendly atmosphere by motivated,competent And contended staff, in a well maintained Hospital Infrastructure
 </string>

    <!--For ActionBarToggle-->
    <string name="title_activity_patients_data_page">Patients Data Page</string>
    <string name="diag">Lorem Ipsum is simply dummy text of the printing and typesetting
        industry.Lorem Ipsum has been the
        industry\'s standard dummy text ever since the 1500s, when an unknown
        printer took a galley of type and scramble edit to make a type specimen book.</string>
    <string name="temperature"> Temperature (&lt;sup>o&lt;/sup>C)</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!--Staff Treatment Status-->
    <string-array name="patient_status">
        <item>Select Status</item>
        <item>Admitted</item>
        <item>Absconded</item>
        <item>Discharged</item>
        <item>Detained</item>
        <item>Discharge on M.C.</item>
        <item>Died</item>
        <item>Lab</item>
        <item>Transferred</item>
    </string-array>

    <string-array name="autocomplete_address">
        <item>Ahwiam</item>
        <item>Ningo</item>
        <item>Ayetepa</item>
        <item>Tsopoli</item>
        <item>Prampram</item>
    </string-array>
    <string-array name="department">
        <item>Select Department</item>
        <item>NClinical</item>
        <item>Record</item>
        <item>OPD</item>
        <item>IPD</item>
        <item>Surgical</item>
        <item>Maternity</item>
        <item>Admin</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">No patient currently</string>
    <string name="treatment_status">Please Select Treatment status</string>
    <string name="can_be_empty">Field can\'t be empty</string>
    <string name="new_account_note">Create a new account for a new Staff. He/She will use this credentials to modify the records of patients of the hospitals</string>
    <string name="create_account">Create Account</string>
    <string name="patient_data">Patient Data</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="log_In_pref">Log in prefernces</string>
    <string name="department">Department</string>

    <string name="welcome">\t \t \t     <i>Welcome to</i> \n <b><u>DANGME COMMUNITY HOSPITAL</u></b></string>

    <string name="public_health"><b><u>Public Health</u></b></string>
    <string name="whatsapp_chat">DCH WhatsApp chat</string>
    <string name="call">tel:0249728476</string>
    <string name="calling">Calling DCH</string>
    <string name="goe_location">geo: 5.737710,0.163097?z=19</string>
    <string name="location">DCH Location</string>

    <string name="note">The medical team is happy to serve you. Please contact DCH through the following channels.</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age :</string>
    <string name="gender">Gender:</string>
    <string name="occupation">Occupation</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="insurance_no">Insurance Number</string>
    <string name="next_of_kin">Next Of Kin</string>
    <string name="next_of_king_full_name">Next of King Full Name</string>
    <string name="relationship">Relationship With Patient</string>
    <string name="incorrect_credentials">Incorrect Credential</string>
    <string name="save">Save</string>
    <string name="activate">Activate</string>

</resources>