<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recordforms.PatientNextOfFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:maxHeight="300dp"
                android:minHeight="450dp"
                android:src="@drawable/ic_next_king"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/relationship" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/next_of_king_name_layout"
                style="@style/Widget.MaterialComponent.NextOfKing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kinsFullName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/next_of_king_full_name"
                    android:inputType="textCapWords"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nofK_mobile_layout"
                style="@style/Widget.MaterialComponent.NextOfKing"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@id/next_of_king_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nextOfKingMobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nofK_relationship_layout"
                style="@style/Widget.MaterialComponent.NextOfKing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nofK_mobile_layout"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nextOfKingRelationship"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/relationship"
                    android:inputType="textCapWords"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nofK_occupation_layout"
                style="@style/Widget.MaterialComponent.NextOfKing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nofK_relationship_layout"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nextOfKingOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/occupation"
                    android:inputType="textCapWords"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nofK_address_layout"

                style="@style/Widget.MaterialComponent.NextOfKing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nofK_occupation_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nextOfAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:inputType="textCapWords"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/registerNextOfKing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nofK_address_layout" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerNextOfKing"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/green"
                android:text="Register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>